fixed problem with horizontal scroll

--- a/src/App.scss
+++ b/src/App.scss
@@ -38,7 +38,6 @@
 
   h3 {
     margin-top: 1rem;
-    margin-left: 1rem;
     font-family: "Roboto", sans-serif;
   }
 }
