--- a/src/components/Navbar2/styles.scss
+++ b/src/components/Navbar2/styles.scss
@@ -62,9 +62,35 @@ img {
   display: none;
 }
 
-/* DESKTOP VERSION */
+@media only screen and (min-width: 800px) {
+  .horizontal-link {
+    width: 95%;
+  }
+  .mobile-container {
+    display: none;
+  }
 
-@media only screen and (min-width: 1024px) {
+  .navbar-logo {
+    margin-right: 150px;
+  }
+
+  .desktop-container {
+    background-image: linear-gradient(#4ea45f, #4e9ecf);
+    height: 100px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  .desktop-links a {
+    color: black;
+    font-size: 1.5rem;
+    margin-right: 30px;
+    text-decoration: none;
+  }
+}
+
+@media only screen and (min-width: 450px) {
   .mobile-container {
     display: none;
   }
