--- a/src/components/RightSideBar/styles.scss
+++ b/src/components/RightSideBar/styles.scss
@@ -2,8 +2,13 @@ body {
   background: purple;
 }
 
-.sidebar-right {
-  padding-left: 20px;
+.app-sidebar {
+  margin: 0;
+  text-align: center;
+}
+
+.app-sidebar-right {
+  margin-right: 30px;
 }
 
 h3 {
