--- a/src/components/Sidebar/styles.scss
+++ b/src/components/Sidebar/styles.scss
@@ -4,7 +4,8 @@
 
 .sidebar-container {
   background-color: #edf8f4;
-  padding: 20px;
+
+  padding: 20px 8px;
 
   h5 {
     font-size: 0.3rem;
@@ -24,6 +25,7 @@
   .sidebar-left {
     display: flex;
     justify-content: flex-start;
+    // padding-left: 10px;
 
     ul {
       display: flex;
