--- a/src/components/Slideshow/styles.scss
+++ b/src/components/Slideshow/styles.scss
@@ -67,9 +67,9 @@
   height: 500px;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 820px) {
   .slideshow-container {
-    width: 700px;
+    width: 500px;
     .slideshow {
       height: 350px;
     }
